Fix: Accessibility improvements (contrast, aria-labels, landmarks) and image resolution

--- a/index.html
+++ b/index.html
@@ -30,61 +30,64 @@
 
 <body>
     <!-- Header Component -->
+    <!-- Header Component -->
     <div id="header-placeholder"></div>
 
-    <!-- Hero Section -->
-    <section class="hero hero-home" id="hero">
-        <div class="hero-content">
-            <h1>THE REHAB HOUSE</h1>
-            <p>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</p>
-            <a href="contact.html#booking" class="btn-hero">Book Appointment</a>
-        </div>
-    </section>
+    <main>
+        <!-- Hero Section -->
+        <section class="hero hero-home" id="hero">
+            <div class="hero-content">
+                <h1>THE REHAB HOUSE</h1>
+                <p>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</p>
+                <a href="contact.html#booking" class="btn-hero">Book Appointment</a>
+            </div>
+        </section>
 
-    <!-- Highlights Section -->
-    <section class="highlights" id="highlights">
-        <h1>Highlights</h1>
-        <div class="highlight-grid">
-            <div class="highlight-card">
-                <p>✔ Wheelchair-Accessible</p>
+        <!-- Highlights Section -->
+        <section class="highlights" id="highlights">
+            <h2>Highlights</h2>
+            <div class="highlight-grid">
+                <div class="highlight-card">
+                    <p>✔ Wheelchair-Accessible</p>
+                </div>
+                <div class="highlight-card">
+                    <p>✔ Lift available</p>
+                </div>
+                <div class="highlight-card">
+                    <p>✔ Day Care Facility</p>
+                </div>
+                <div class="highlight-card">
+                    <p>✔ Admission Facility for Rehabilitation</p>
+                </div>
+                <div class="highlight-card">
+                    <p>✔ Multiple Physiotherapy sessions per day</p>
+                </div>
+                <div class="highlight-card">
+                    <p>✔ Physical, Cognitive, Occupational, Speech Therapy- All under one roof</p>
+                </div>
+                <div class="highlight-card">
+                    <p>✔ In house Nutritionist, Psychologist, Orthotist</p>
+                </div>
+                <div class="highlight-card">
+                    <p>✔ Diagnostic tests- Blood tests, Xrays, DEXA Scan, ECG, Neurogenetic Testing</p>
+                </div>
+                <div class="highlight-card">
+                    <p>✔ Manual Therapy to Robotic Rehabilitation</p>
+                </div>
+                <div class="highlight-card">
+                    <p>✔ Personalized Rehabilitation Plans</p>
+                </div>
             </div>
-            <div class="highlight-card">
-                <p>✔ Lift available</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Day Care Facility</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Admission Facility for Rehabilitation</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Multiple Physiotherapy sessions per day</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Physical, Cognitive, Occupational, Speech Therapy- All under one roof</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ In house Nutritionist, Psychologist, Orthotist</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Diagnostic tests- Blood tests, Xrays, DEXA Scan, ECG, Neurogenetic Testing</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Manual Therapy to Robotic Rehabilitation</p>
-            </div>
-            <div class="highlight-card">
-                <p>✔ Personalized Rehabilitation Plans</p>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Testimonials Section -->
-    <section class="testimonials" id="testimonials">
-        <!-- <h2>What Our Patients Say</h2> -->
-        <div class="testimonial-grid" id="testimonial-container">
-            <!-- Loaded from js/testimonials.js -->
-        </div>
-    </section>
+        <!-- Testimonials Section -->
+        <section class="testimonials" id="testimonials">
+            <!-- <h2>What Our Patients Say</h2> -->
+            <div class="testimonial-grid" id="testimonial-container">
+                <!-- Loaded from js/testimonials.js -->
+            </div>
+        </section>
+    </main>
 
 
 
@@ -95,7 +98,7 @@
 
 
     <!-- Back to Top Button -->
-    <button class="back-to-top" id="backToTop" onclick="scrollToTop()">↑</button>
+    <button class="back-to-top" id="backToTop" onclick="scrollToTop()" aria-label="Back to Top">↑</button>
 
     <!-- JavaScript -->
     <!-- <script src="js/testimonials.js"></script> -->
