Perf: Convert images to WebP and update README

--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
             <div class="service-container">
                 <!-- Service Cards -->
                 <div class="service-card" onclick="toggleDetails('service1')">
-                    <img src="images/balance-training.jpg" alt="Balance & Postural Control">
+                    <img src="images/balance-training.webp" alt="Balance & Postural Control" loading="lazy">
                     <div class="service-content">
                         <h3>Balance & Postural Control</h3>
                         <p class="service-details" id="service1">Drills with Fall Prevention Strategies through
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="service-card" onclick="toggleDetails('service2')">
-                    <img src="images/vestibular-therapy.jpg" alt="Vestibular Rehabilitation">
+                    <img src="images/vestibular-therapy.webp" alt="Vestibular Rehabilitation" loading="lazy">
                     <div class="service-content">
                         <h3>Vestibular Rehabilitation</h3>
                         <p class="service-details" id="service2">Specialized therapy to treat balance disorders.</p>
@@ -57,7 +57,7 @@
                 </div>
 
                 <div class="service-card" onclick="toggleDetails('service3')">
-                    <img src="images/visual-therapy.jpg" alt="Visual Therapy">
+                    <img src="images/visual-therapy.webp" alt="Visual Therapy" loading="lazy">
                     <div class="service-content">
                         <h3>Visual Therapy</h3>
                         <p class="service-details" id="service3">For Vision deficits due to Neurological Conditions</p>
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="service-card" onclick="toggleDetails('service4')">
-                    <img src="images/spasticity-management.jpg" alt="Spasticity & Posture Management">
+                    <img src="images/spasticity-management.webp" alt="Spasticity & Posture Management" loading="lazy">
                     <div class="service-content">
                         <h3>Spasticity & Posture Management</h3>
                         <p class="service-details" id="service4">With Strategies to improve Sedentary Lifestyle</p>
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="service-card" onclick="toggleDetails('service5')">
-                    <img src="images/cognitive-training.jpg" alt="Cognition-Enhancing Activities">
+                    <img src="images/cognitive-training.webp" alt="Cognition-Enhancing Activities" loading="lazy">
                     <div class="service-content">
                         <h3>Cognition-Enhancing Activities</h3>
                         <p class="service-details" id="service5">With multiple Pen & Paper Activities, Board & Screen
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="service-card" onclick="toggleDetails('service6')">
-                    <img src="images/pain-management.jpg" alt="Pain Management">
+                    <img src="images/pain-management.webp" alt="Pain Management" loading="lazy">
                     <div class="service-content">
                         <h3>Pain Management</h3>
                         <p class="service-details" id="service6">Includes Dry Needling, Cupping, Manipulations,
