--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
             <div class="team-container">
                 <!-- Dr. Vidhi -->
                 <div class="team-member">
-                    <img src="images/dr-vidhi.jpeg" alt="Dr. Vidhi Dave">
+                    <img src="images/dr-vidhi.webp" alt="Dr. Vidhi Dave" loading="lazy">
                     <h3>Dr. Vidhi Dave</h3>
                     <p>Specialist in Neurorehabilitation and Physiotherapy.</p>
                     <button class="know-more-btn" onclick="openProfile('vidhi')">Know More</button>
@@ -72,7 +72,7 @@
 
                 <!-- Dr. Vinit -->
                 <div class="team-member">
-                    <img src="images/dr-vinit.jpeg" alt="Dr. Vinit Gada">
+                    <img src="images/dr-vinit.webp" alt="Dr. Vinit Gada" loading="lazy">
                     <h3>Dr. Vinit Gada</h3>
                     <p>Expert in Orthopedic Rehabilitation and Pain Management.</p>
                     <button class="know-more-btn" onclick="openProfile('vinit')">Know More</button>
