--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Outfit:wght@400;600;700&display=swap"
         rel="stylesheet">
     <!-- Preload LCP Image -->
-    <link rel="preload" as="image" href="images/hero-banner.jpg" fetchpriority="high">
+    <link rel="preload" as="image" href="images/hero-banner.webp" fetchpriority="high">
 
     <!-- CSS Optimization (Eliminate @import blocking) -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
