Feat: Blog SEO improvements and Premium UI/UX Redesign

--- a/blogs/ergonomics.html
+++ b/blogs/ergonomics.html
@@ -17,8 +17,8 @@
 
     <main class="container" style="padding: 100px 20px;">
         <article>
-            <h1>Ergonomics for Back Pain</h1>
-            <p class="text-muted">December 10, 2025</p>
+            <h1>Work From Home Ergonomics: Office Setup Tips from Mumbai Physiotherapists</h1>
+            <p class="text-muted">December 10, 2025 | By Dr. Vidhi Dave, The Rehab House, Mumbai</p>
             <img src="../images/blog-3.jpg" alt="Ergonomics"
                 style="width:100%; max-height:400px; object-fit:cover; border-radius:10px; margin-bottom:20px; background:#ddd;">
 
@@ -35,6 +35,9 @@
 
             <h3>3. Take Breaks</h3>
             <p>The 20-20-20 rule isn't just for eyes. Move every 20 minutes to prevent muscle stiffness.</p>
+
+            <p>Experiencing persistent pain? Check out our <a href="../services.html">Pain Management Services</a> for
+                expert relief.</p>
 
             <p><a href="../index.html">Back to Home</a></p>
         </article>
