--- a/blogs/neuro-rehabilitation-process.html
+++ b/blogs/neuro-rehabilitation-process.html
@@ -53,11 +53,12 @@
 
     <main class="container" style="padding: 120px 20px 60px;">
         <article class="blog-content" style="max-width: 800px; margin: 0 auto;">
-            <h1>The Neuro-Rehabilitation Process: A Comprehensive Guide</h1>
-            <p class="text-muted">November 15, 2025 | By Dr. Vidhi Dave</p>
+            <h1>Neuro Rehabilitation in Mumbai: The Complete Recovery Process Explained</h1>
+            <p class="text-muted">November 15, 2025 | By Dr. Vidhi Dave, The Rehab House, Mumbai</p>
             <img src="../images/blog-neuro-process.jpg" alt="Neuro Rehabilitation Process" class="blog-image">
 
-            <p>For patients and families facing the aftermath of a stroke, spinal cord injury, or traumatic brain
+            <p>For patients and families facing the aftermath of a <a href="stroke-recovery.html">stroke</a>, spinal
+                cord injury, or traumatic brain
                 injury, the term "neuro-rehabilitation" is often heard but rarely fully understood. It is a complex,
                 multifaceted medical journey designed to aid recovery from nervous system injury and to minimize and/or
                 compensate for any functional alterations resulting from it.</p>
