--- a/blogs/physiotherapy-brain-injury.html
+++ b/blogs/physiotherapy-brain-injury.html
@@ -45,8 +45,8 @@
 
     <main class="container" style="padding: 120px 20px 60px;">
         <article class="blog-content" style="max-width: 800px; margin: 0 auto;">
-            <h1>Physiotherapy Benefits After Brain Injury: A Path to Recovery</h1>
-            <p class="text-muted">October 25, 2025 | By Dr. Vidhi Dave</p>
+            <h1>Traumatic Brain Injury (TBI) Rehab in Mumbai: How Physiotherapy Helps</h1>
+            <p class="text-muted">October 25, 2025 | By Dr. Vidhi Dave, The Rehab House, Mumbai</p>
             <img src="../images/blog-brain-injury.jpg" alt="Physiotherapy for Brain Injury" class="blog-image">
 
             <p>Traumatic Brain Injury (TBI) is a life-altering event that can significantly impact a person's physical,
@@ -57,7 +57,8 @@
                 the
                 brain has an incredible ability to rewire itself, forming new neural connections to compensate for
                 damaged
-                areas. Physiotherapy plays a pivotal, indispensable role in facilitating this recovery journey.</p>
+                areas. <a href="../services.html">Physiotherapy</a> plays a pivotal, indispensable role in facilitating
+                this recovery journey.</p>
 
             <p>At <strong>The Rehab House</strong>, South Mumbai's first neuro-rehabilitation centre with admission
                 facilities, we witness the transformative power of targeted physiotherapy every day. In this
