--- a/blogs/stroke-recovery.html
+++ b/blogs/stroke-recovery.html
@@ -18,13 +18,14 @@
 
     <main class="container" style="padding: 100px 20px;">
         <article>
-            <h1>5 Tips for Stroke Recovery at Home</h1>
-            <p class="text-muted">October 15, 2025</p>
+            <h1>Stroke Rehabilitation in Mumbai: 5 Expert Tips for Home Recovery</h1>
+            <p class="text-muted">October 15, 2025 | By Dr. Vidhi Dave, The Rehab House, Mumbai</p>
             <img src="../images/blog-1.jpg" alt="Stroke Recovery"
                 style="width:100%; max-height:400px; object-fit:cover; border-radius:10px; margin-bottom:20px; background:#ddd;">
 
             <p>Recovering from a stroke is a journey that requires patience, consistency, and the right approach. While
-                professional rehabilitation is crucial, what you do at home matters just as much.</p>
+                professional rehabilitation is crucial, what you do at home matters just as much. At <a
+                    href="../index.html">The Rehab House in South Mumbai</a>, we emphasize a holistic approach.</p>
 
             <h3>1. Repetition is Key</h3>
             <p>Neuroplasticity—the brain's ability to rewire itself—relies on repetition. Repeat your prescribed
@@ -36,6 +37,9 @@
 
             <h3>3. Stay Active</h3>
             <p>Avoid staying in bed all day. Sit up, stand, or walk with assistance to maintain muscle tone.</p>
+
+            <p>Need a personalized recovery plan? <a href="../contact.html">Contact our Mumbai clinic today</a> or
+                explore our <a href="../services.html">Neuro-Rehabilitation Services</a>.</p>
 
             <p><a href="../index.html">Back to Home</a></p>
         </article>
