--- a/blog.html
+++ b/blog.html
@@ -13,77 +13,156 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/components.css">
     <style>
+        :root {
+            --card-radius: 16px;
+            --transition-speed: 0.3s;
+            --shadow-sm: 0 4px 6px rgba(0, 0, 0, 0.05);
+            --shadow-md: 0 10px 30px rgba(0, 0, 0, 0.1);
+            --shadow-lg: 0 20px 40px rgba(0, 0, 0, 0.15);
+        }
+
+        body {
+            background-color: #f8f9fa;
+            /* Light grey bg for contrast */
+        }
+
         .blog-header {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('images/hero-bg.jpg');
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('images/hero-bg.jpg');
             background-size: cover;
             background-position: center;
             color: white;
             text-align: center;
-            padding: 100px 20px;
+            padding: 120px 20px 100px;
+            margin-bottom: -60px;
+            /* Overlap effect */
+            position: relative;
+            z-index: 1;
+        }
+
+        .blog-header h1 {
+            font-size: 3.5rem;
+            font-weight: 700;
+            letter-spacing: -1px;
+            margin-bottom: 1rem;
         }
 
         .blog-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            padding: 50px 20px;
-            max-width: 1200px;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 40px;
+            padding: 0 20px 80px;
+            max-width: 1280px;
             margin: 0 auto;
+            position: relative;
+            z-index: 2;
         }
 
+        /* Card Design */
         .blog-card {
             background: white;
-            border-radius: 10px;
+            border-radius: var(--card-radius);
             overflow: hidden;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
+            box-shadow: var(--shadow-sm);
+            transition: transform var(--transition-speed) ease, box-shadow var(--transition-speed) ease;
             display: flex;
             flex-direction: column;
+            border: 1px solid rgba(0, 0, 0, 0.03);
+            height: 100%;
         }
 
         .blog-card:hover {
-            transform: translateY(-5px);
+            transform: translateY(-8px);
+            box-shadow: var(--shadow-md);
+        }
+
+        /* Image Wrapper */
+        .blog-img-wrapper {
+            position: relative;
+            overflow: hidden;
+            height: 240px;
         }
 
         .blog-img {
             width: 100%;
-            height: 200px;
-            background-color: #ddd;
-            /* Placeholder */
+            height: 100%;
+            background-color: #eee;
             object-fit: cover;
+            transition: transform 0.5s ease;
         }
 
+        .blog-card:hover .blog-img {
+            transform: scale(1.05);
+        }
+
+        /* Content */
         .blog-content {
-            padding: 20px;
+            padding: 25px;
             flex-grow: 1;
             display: flex;
             flex-direction: column;
         }
 
+        /* Date Tag */
         .blog-date {
-            color: #888;
-            font-size: 0.9em;
-            margin-bottom: 10px;
+            display: inline-block;
+            background-color: rgba(182, 146, 34, 0.1);
+            color: var(--primary-color);
+            font-size: 0.85em;
+            font-weight: 600;
+            padding: 4px 12px;
+            border-radius: 20px;
+            margin-bottom: 15px;
+            align-self: flex-start;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .blog-title {
-            font-size: 1.25em;
-            color: var(--primary-color);
-            margin-bottom: 10px;
-            font-weight: bold;
+            font-size: 1.4rem;
+            color: var(--dark-color);
+            margin-bottom: 12px;
+            font-weight: 700;
+            line-height: 1.3;
+            font-family: 'Outfit', sans-serif;
         }
 
         .blog-excerpt {
-            color: #555;
+            color: #666;
             flex-grow: 1;
-            margin-bottom: 20px;
+            margin-bottom: 25px;
+            line-height: 1.6;
+            font-size: 1rem;
         }
 
+        /* Read More Button */
         .read-more {
-            color: var(--secondary-color);
+            color: var(--white-color);
+            background: var(--primary-color);
             text-decoration: none;
-            font-weight: bold;
+            font-weight: 600;
+            padding: 10px 24px;
+            border-radius: 8px;
             align-self: flex-start;
+            transition: background 0.2s ease, transform 0.2s ease;
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .read-more:hover {
+            background: var(--gold-text);
+            transform: translateX(4px);
+            color: white;
+        }
+
+        .read-more::after {
+            content: '→';
+            font-size: 1.1em;
+            transition: transform 0.2s ease;
+        }
+
+        .read-more:hover::after {
+            transform: translateX(3px);
         }
     </style>
 </head>
