--- a/blogs/vestibular-therapy.html
+++ b/blogs/vestibular-therapy.html
@@ -17,8 +17,8 @@
 
     <main class="container" style="padding: 100px 20px;">
         <article>
-            <h1>Understanding Vestibular Therapy</h1>
-            <p class="text-muted">November 02, 2025</p>
+            <h1>Vestibular Therapy in Mumbai: Treatment for Vertigo & Balance Disorders</h1>
+            <p class="text-muted">November 02, 2025 | By Dr. Vidhi Dave, The Rehab House, Mumbai</p>
             <img src="../images/blog-2.jpg" alt="Vestibular Therapy"
                 style="width:100%; max-height:400px; object-fit:cover; border-radius:10px; margin-bottom:20px; background:#ddd;">
 
@@ -33,6 +33,9 @@
             <h3>How VRT Helps</h3>
             <p>VRT uses an exercise-based program primarily designed to reduce vertigo and dizziness, gaze instability,
                 and/or imbalance and falls.</p>
+
+            <p>Suffering from vertigo? <a href="../contact.html">Book an appointment</a> with our vestibular specialists
+                today.</p>
 
             <p><a href="../index.html">Back to Home</a></p>
         </article>
