feat: UX/UI overhaul, SEO improvements, and Google Reviews integration

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Rehab House | Premier Neuro-rehabilitation Center & Physiotherapy in Mumbai</title>
+    <title>Neuro Rehabilitation Centre in South Mumbai | The Rehab House</title>
     <meta name="description"
-        content="South Mumbai's leading Neuro-rehabilitation Centre offering inpatient admission, physiotherapy, pain management, and holistic recovery plans. Book an appointment today!">
+        content="The Rehab House is a neuro & ortho rehabilitation centre in South Mumbai. Expert therapy for stroke, brain injury, orthopedic conditions. Contact us today.">
     <meta name="keywords"
         content="Neurorehabilitation, Physiotherapy, Mumbai, Rehabilitation Centre, Paralysis, Stroke Recovery, Pain Management, Occupational Therapy, Inpatient Rehab">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,9 +37,26 @@
         <!-- Hero Section -->
         <section class="hero hero-home" id="hero">
             <div class="hero-content">
-                <h1>THE REHAB HOUSE</h1>
-                <p>South Mumbai's First Neuro-rehabilitation Centre with Admission Facility</p>
-                <a href="contact.html#booking" class="btn-hero">Book Appointment</a>
+                <h1>South Mumbai’s Leading Neuro & Ortho Rehabilitation Centre</h1>
+                <p>Expert Care for Stroke, Parkinson’s, Spine Injury & Post-Surgery Recovery</p>
+                <div class="hero-buttons">
+                    <a href="contact.html#booking" class="btn-hero">➡️ Book Appointment</a>
+                    <a href="https://wa.me/919653699526" class="btn-hero btn-secondary">WhatsApp Us</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Google Reviews Marquee -->
+        <section class="google-reviews-section">
+            <h2 style="text-align: center; margin-bottom: 20px; color: var(--primary-color);">Patient Stories</h2>
+            <div class="google-reviews-container">
+                <div class="marquee-content" id="reviews-marquee">
+                    <!-- Reviews injected by JS -->
+                    <div class="review-card"
+                        style="display: flex; align-items: center; justify-content: center; width: 100%;">
+                        Loading verified reviews...
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -102,6 +119,8 @@
 
     <!-- JavaScript -->
     <!-- <script src="js/testimonials.js"></script> -->
+    <script src="js/config.js"></script>
+    <script src="js/google_reviews.js" defer></script>
     <script src="js/faqs.js" defer></script>
     <script src="js/header_footer.js" defer></script>
     <script src="js/main.js" defer></script>
