--- a/services.html
+++ b/services.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services | Neuro-rehab, Physiotherapy & Pain Management - The Rehab House</title>
+    <title>Rehabilitation & Therapy Services – The Rehab House</title>
     <meta name="description"
-        content="Explore our specialized services: Neurorehabilitation, Orthopedic Therapy, Pain Management, Pediatric Rehab, and more. Advanced technologies for faster recovery.">
+        content="Discover our multidisciplinary rehabilitation services including physiotherapy, occupational therapy, speech therapy, vestibular rehab, and more. Personalized care in South Mumbai.">
     <meta name="keywords"
-        content="Physiotherapy Services, Neurorehabilitation, Pain Management, Orthopedic Therapy, Pediatric Rehabilitation, Sports Injury, Vestibular Therapy, Balance Training">
+        content="Physiotherapy Services, Neurorehabilitation, Pain Management, Orthopedic Therapy, Pediatric Rehabilitation, Sports Injury, Vestibular Therapy, Balance Training, Post-Surgery Rehab">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -43,8 +43,22 @@
                     <img src="images/balance-training.webp" alt="Balance & Postural Control" loading="lazy">
                     <div class="service-content">
                         <h3>Balance & Postural Control</h3>
-                        <p class="service-details" id="service1">Drills with Fall Prevention Strategies through
-                            Interactive Motion Sensors</p>
+                        <p>Our Balance & Postural Control program is designed to prevent falls and improve stability for
+                            patients with neurological or orthopedic conditions. We utilize advanced interactive motion
+                            sensors and computerized posturography to assess and treat balance deficits.</p>
+                        <div class="service-details" id="service1">
+                            <h4>Conditions Treated</h4>
+                            <ul>
+                                <li>Parkinson’s Disease</li>
+                                <li>Ataxia</li>
+                                <li>Stroke recovery</li>
+                                <li>Geriatric balance issues</li>
+                            </ul>
+                            <h4>Our Approach</h4>
+                            <p>We combine traditional physiotherapy drills with state-of-the-art technology to create a
+                                safe and effective training environment. Patients engage in fun, interactive games that
+                                challenge their stability, reaction time, and coordination.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -52,7 +66,19 @@
                     <img src="images/vestibular-therapy.webp" alt="Vestibular Rehabilitation" loading="lazy">
                     <div class="service-content">
                         <h3>Vestibular Rehabilitation</h3>
-                        <p class="service-details" id="service2">Specialized therapy to treat balance disorders.</p>
+                        <p>Vestibular Rehabilitation Therapy (VRT) is a specialized form of therapy intended to
+                            alleviate both the primary and secondary problems caused by vestibular disorders.</p>
+                        <div class="service-details" id="service2">
+                            <h4>Why It's Needed</h4>
+                            <p>Vertigo, dizziness, and imbalance can severely impact quality of life. Our specialized
+                                program targets the root cause of these symptoms.</p>
+                            <h4>Therapy Techniques</h4>
+                            <ul>
+                                <li>Gaze Stabilization Exercises</li>
+                                <li>Canalith Repositioning Maneuvers (Epley)</li>
+                                <li>Habituation Exercises</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
@@ -60,7 +86,19 @@
                     <img src="images/visual-therapy.webp" alt="Visual Therapy" loading="lazy">
                     <div class="service-content">
                         <h3>Visual Therapy</h3>
-                        <p class="service-details" id="service3">For Vision deficits due to Neurological Conditions</p>
+                        <p>Visual Therapy is crucial for patients suffering from vision deficits due to neurological
+                            conditions such as stroke or traumatic brain injury.</p>
+                        <div class="service-details" id="service3">
+                            <h4>Focus Areas</h4>
+                            <p>We work on improving visual tracking, convergence, and visual-spatial processing to help
+                                patients navigate their environment safely.</p>
+                            <h4>Benefits</h4>
+                            <ul>
+                                <li>Improved reading ability</li>
+                                <li>Better depth perception</li>
+                                <li>Reduced visual fatigue</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
@@ -68,7 +106,19 @@
                     <img src="images/spasticity-management.webp" alt="Spasticity & Posture Management" loading="lazy">
                     <div class="service-content">
                         <h3>Spasticity & Posture Management</h3>
-                        <p class="service-details" id="service4">With Strategies to improve Sedentary Lifestyle</p>
+                        <p>Effective management of spasticity and posture is vital for preventing contractures and
+                            improving independence in daily activities.</p>
+                        <div class="service-details" id="service4">
+                            <h4>Comprehensive Care</h4>
+                            <p>Our approach includes stretching protocols, splinting, and positioning strategies to
+                                combat the effects of a sedentary lifestyle and muscle stiffness.</p>
+                            <h4>Technologies Used</h4>
+                            <ul>
+                                <li>Electrical Stimulation</li>
+                                <li>Biofeedback</li>
+                                <li>Custom Orthotics consultation</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
@@ -76,8 +126,20 @@
                     <img src="images/cognitive-training.webp" alt="Cognition-Enhancing Activities" loading="lazy">
                     <div class="service-content">
                         <h3>Cognition-Enhancing Activities</h3>
-                        <p class="service-details" id="service5">With multiple Pen & Paper Activities, Board & Screen
-                            Games- for Memory, Attention, Reaction Time and Mental Agility Training</p>
+                        <p>Our cognitive rehabilitation program focuses on restoring memory, attention, and executive
+                            functions impaired by brain injury or degeneration.</p>
+                        <div class="service-details" id="service5">
+                            <h4>Training Modules</h4>
+                            <p>We utilize a mix of traditional pen-and-paper tasks, board games, and digital
+                                screen-based activities to simulate real-world challenges.</p>
+                            <h4>Key Outcomes</h4>
+                            <ul>
+                                <li>Enhanced Memory and Recall</li>
+                                <li>Improved Attention Span</li>
+                                <li>Faster Reaction Times</li>
+                                <li>Better Problem-Solving Skills</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
@@ -85,8 +147,19 @@
                     <img src="images/pain-management.webp" alt="Pain Management" loading="lazy">
                     <div class="service-content">
                         <h3>Pain Management</h3>
-                        <p class="service-details" id="service6">Includes Dry Needling, Cupping, Manipulations,
-                            Kinesiotaping, and Electrotherapy Machines.</p>
+                        <p>Chronic pain requires a multi-faceted approach. We offer evidence-based treatments to
+                            alleviate pain and restore function.</p>
+                        <div class="service-details" id="service6">
+                            <h4>Techniques</h4>
+                            <ul>
+                                <li>Dry Needling & Cupping Therapy</li>
+                                <li>Manual Therapy & Manipulations</li>
+                                <li>Kinesiotaping</li>
+                                <li>Advanced Electrotherapy (IFT, TENS, Ultrasound)</li>
+                            </ul>
+                            <h4>Conditions</h4>
+                            <p>Back pain, neck pain, sports injuries, and post-surgical pain.</p>
+                        </div>
                     </div>
                 </div>
             </div>
