fix: Hero layout full-width, scrollable reviews, and stable loading

--- a/index.html
+++ b/index.html
@@ -33,32 +33,33 @@
     <!-- Header Component -->
     <div id="header-placeholder"></div>
 
-    <main>
-        <!-- Hero Section -->
-        <section class="hero hero-home" id="hero">
-            <div class="hero-content">
-                <h1>South Mumbai’s Leading Neuro & Ortho Rehabilitation Centre</h1>
-                <p>Expert Care for Stroke, Parkinson’s, Spine Injury & Post-Surgery Recovery</p>
-                <div class="hero-buttons">
-                    <a href="contact.html#booking" class="btn-hero">➡️ Book Appointment</a>
-                    <a href="https://wa.me/919653699526" class="btn-hero btn-secondary">WhatsApp Us</a>
-                </div>
+    <!-- Hero Section (Full Width) -->
+    <section class="hero hero-home" id="hero">
+        <div class="hero-content">
+            <h1>South Mumbai’s Leading Neuro & Ortho Rehabilitation Centre</h1>
+            <p>Expert Care for Stroke, Parkinson’s, Spine Injury & Post-Surgery Recovery</p>
+            <div class="hero-buttons">
+                <a href="contact.html#booking" class="btn-hero">➡️ Book Appointment</a>
+                <a href="https://wa.me/919653699526" class="btn-hero btn-secondary">WhatsApp Us</a>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- Google Reviews Marquee -->
-        <section class="google-reviews-section">
-            <h2 style="text-align: center; margin-bottom: 20px; color: var(--primary-color);">Patient Stories</h2>
-            <div class="google-reviews-container">
-                <div class="marquee-content" id="reviews-marquee">
-                    <!-- Reviews injected by JS -->
-                    <div class="review-card"
-                        style="display: flex; align-items: center; justify-content: center; width: 100%;">
-                        Loading verified reviews...
-                    </div>
+    <!-- Google Reviews Marquee (Full Width) -->
+    <section class="google-reviews-section">
+        <h2 style="text-align: center; margin-bottom: 20px; color: var(--primary-color);">Patient Stories</h2>
+        <div class="google-reviews-container">
+            <div class="marquee-content" id="reviews-marquee">
+                <!-- Reviews injected by JS -->
+                <div class="review-card"
+                    style="display: flex; align-items: center; justify-content: center; width: 100%;">
+                    Loading verified reviews...
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+
+    <main>
 
         <!-- Highlights Section -->
         <section class="highlights" id="highlights">
