fix: live site errors (config.js deploy, hero image preload, testimonials)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Outfit:wght@400;600;700&display=swap"
         rel="stylesheet">
     <!-- Preload LCP Image -->
-    <link rel="preload" as="image" href="images/hero-banner.webp" fetchpriority="high">
+    <link rel="preload" as="image" href="images/hero-banner.jpg" fetchpriority="high">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
 
     <!-- CSS Optimization (Eliminate @import blocking) -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -119,7 +120,7 @@
     <button class="back-to-top" id="backToTop" onclick="scrollToTop()" aria-label="Back to Top">↑</button>
 
     <!-- JavaScript -->
-    <!-- <script src="js/testimonials.js"></script> -->
+    <script src="js/testimonials.js"></script>
     <script src="js/config.js"></script>
     <script src="js/google_reviews.js" defer></script>
     <script src="js/faqs.js" defer></script>
