fix: update review loading placeholder text

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="marquee-content" id="reviews-marquee">
                 <!-- Reviews injected by JS -->
                 <div class="review-card"
-                    style="display: flex; align-items: center; justify-content: center; width: 100%;">
-                    Loading verified reviews...
+                    style="display: flex; align-items: center; justify-content: center; width: 100%; text-align: center;">
+                    Patient Stories<br>(Reviews powered by Google. Loading soon…)
                 </div>
             </div>
         </div>
