Update global font to Libre Baskerville and refactor font management

--- a/about_us.html
+++ b/about_us.html
@@ -9,6 +9,10 @@
         content="Meet our expert team of physiotherapists and specialists at The Rehab House. Committed to providing comprehensive, personalized rehabilitation in Mumbai.">
     <meta name="keywords"
         content="About Rehab House, Dr. Vidhi Dave, Dr. Vinit Gada, Rehabilitation Team, Mission Vision, Physiotherapy Clinic Mumbai">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
