--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,11 @@
         content="Read expert articles on stroke recovery, pain management, physiotherapy benefits, and neurological health from The Rehab House team.">
     <meta name="keywords"
         content="Rehab Blog, Physiotherapy Articles, Stroke Recovery Tips, Pain Management Advice, Health Wellness">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/components.css">
@@ -123,7 +128,7 @@
             margin-bottom: 12px;
             font-weight: 700;
             line-height: 1.3;
-            font-family: 'Outfit', sans-serif;
+            font-family: var(--font-heading);
         }
 
         .blog-excerpt {
