--- a/blogs/physiotherapy-brain-injury.html
+++ b/blogs/physiotherapy-brain-injury.html
@@ -9,6 +9,10 @@
         content="Discover the comprehensive benefits of physiotherapy after a Traumatic Brain Injury (TBI). Learn how neuro-rehab promotes neuroplasticity, restores mobility, and rebuilds independence.">
     <meta name="keywords"
         content="Physiotherapy for Brain Injury, TBI Recovery, Neuro Rehabilitation, Brain Injury Treatment, Motor Function Recovery, Neuroplasticity, Gait Training, Balance Exercises">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <style>
