--- a/blogs/stroke-recovery.html
+++ b/blogs/stroke-recovery.html
@@ -9,6 +9,10 @@
         content="Maximize stroke recovery with these 5 expert tips for home exercises. Learn how repetition and active movement aid neuroplasticity.">
     <meta name="keywords"
         content="Stroke Recovery, Home Exercises, Neuroplasticity, Stroke Rehab, Neurorehabilitation Tips">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
