--- a/services.html
+++ b/services.html
@@ -9,6 +9,10 @@
         content="Discover our multidisciplinary rehabilitation services including physiotherapy, occupational therapy, speech therapy, vestibular rehab, and more. Personalized care in South Mumbai.">
     <meta name="keywords"
         content="Physiotherapy Services, Neurorehabilitation, Pain Management, Orthopedic Therapy, Pediatric Rehabilitation, Sports Injury, Vestibular Therapy, Balance Training, Post-Surgery Rehab">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
