--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -30,10 +30,10 @@
     <!-- Use main site fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Outfit:wght@400;600;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
 
+    <link rel="stylesheet" href="../css/variables.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <style>
         :root {
@@ -46,7 +46,7 @@
         }
 
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: var(--font-body);
             background-color: var(--bg-color);
             margin: 0;
             color: var(--text-color);
@@ -77,7 +77,7 @@
         }
 
         .brand-text {
-            font-family: 'Outfit', sans-serif;
+            font-family: var(--font-heading);
             font-weight: 700;
             font-size: 1.2rem;
             color: var(--primary-color);
@@ -168,7 +168,7 @@
         .card-header h3 {
             margin: 0;
             color: var(--primary-color);
-            font-family: 'Outfit', sans-serif;
+            font-family: var(--font-heading);
             font-size: 1.3rem;
         }
 
