--- a/admin/login.html
+++ b/admin/login.html
@@ -8,10 +8,10 @@
     <!-- Use main site fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Outfit:wght@400;600;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
 
+    <link rel="stylesheet" href="../css/variables.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <style>
         :root {
@@ -23,7 +23,7 @@
         }
 
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: var(--font-body);
             background-color: var(--bg-color);
             height: 100vh;
             display: flex;
@@ -53,7 +53,7 @@
         }
 
         h2 {
-            font-family: 'Outfit', sans-serif;
+            font-family: var(--font-heading);
             color: var(--primary-color);
             margin-bottom: 10px;
             font-weight: 700;
