--- a/blogs/ergonomics.html
+++ b/blogs/ergonomics.html
@@ -8,6 +8,10 @@
     <meta name="description"
         content="Relieve back pain with simple ergonomic adjustments for your home office. Expert advice on chair height, monitor position, and movement.">
     <meta name="keywords" content="Ergonomics, Back Pain, Work From Home, Posture Tips, Office Chair Setup">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
