--- a/blogs/neuro-rehabilitation-process.html
+++ b/blogs/neuro-rehabilitation-process.html
@@ -9,6 +9,10 @@
         content="A detailed guide to the Neuro Rehabilitation process. From initial assessment to discharge planning, understand every step of the recovery journey at The Rehab House.">
     <meta name="keywords"
         content="Neuro Rehabilitation Process, Inpatient Rehab, Stroke Rehab, TBI Recovery, Physiotherapy Assessment, Cognitive Therapy, Goal Setting, Discharge Planning">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <style>
