--- a/blogs/vestibular-therapy.html
+++ b/blogs/vestibular-therapy.html
@@ -8,6 +8,10 @@
     <meta name="description"
         content="Understand Vestibular Rehabilitation Therapy (VRT) for dizziness, vertigo, and balance disorders. Learn how our specialized therapy helps.">
     <meta name="keywords" content="Vestibular Therapy, VRT, Vertigo Treatment, Balance Disorder, Dizziness Rehab">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
